Исправлен сервис вакансий (VacancyService): Единый интерфейс для работы с обеими платформами Автоматическое определение платформы по URL/ID Общий формат данных с полем platform
Исправлена интеграция SuperJob API:
Стабильное получение вакансий через CORS прокси
Корректное отображение данных SuperJob
Исправление маппинга полей (профессия, компания, зарплата)

Добавлено отображение платформы в интерфейсе:
Бейджи платформ в карточках вакансий
Информация о платформе в деталях вакансии
Единообразное отображение для HH.ru и SuperJob

--- a/frontend/src/locale/messages.en.json
+++ b/frontend/src/locale/messages.en.json
@@ -308,8 +308,8 @@
     "RESUME_ID": "Resume ID in the system",
     "UPLOAD_RESUME": "Upload resume",
     "RESUME_ID_PLACEHOLDER": "Enter your resume ID",
-    "VACANCY_ID": "Vacancy ID on HH.ru",
-    "VACANCY_ID_PLACEHOLDER": "For example: 12345678",
+    "VACANCY_ID": "Vacancy ID",
+    "VACANCY_ID_PLACEHOLDER": "For example: 12345678 (HH) or 12345 (SuperJob)",
     "VACANCY_URL": "Vacancy URL",
     "VACANCY_URL_HINT": "Paste vacancy link to get detailed information",
     "STYLE": "Letter style",
@@ -448,7 +448,7 @@
     "DOWNLOAD": "Download Vacancy",
     "BY_URL": "Download by URL",
     "LINK_PLACEHOLDER": "Vacancy link",
-    "LINK_HINT": "Supported formats: https://hh.ru/vacancy/12345678",
+    "LINK_HINT": "Supported formats: https://hh.ru/vacancy/12345678, https://superjob.ru/vakansii/12345.html",
     "LOAD": "Load Vacancy",
     "EXPORT": "Export Vacancy",
     "INCLUDE_SALARY": "Include salary",
