подправлен перевод(текст с hh заменен на hh, superjob и тп), исправлены ошибки с перепутанными контейнерами в html кодах

--- a/frontend/src/locale/messages.ru.json
+++ b/frontend/src/locale/messages.ru.json
@@ -40,8 +40,8 @@
       "AI_RESUME_DESC": "Автоматическое создание профессиональных резюме с использованием искусственного интеллекта",
       "COVER_LETTERS": "Сопроводительные письма",
       "COVER_LETTERS_DESC": "Персонализированные письма для каждой вакансии с учетом требований работодателя",
-      "HH_INTEGRATION": "Интеграция с HH.ru",
-      "HH_INTEGRATION_DESC": "Прямая публикация резюме и отправка откликов на популярной платформе",
+      "JOB_PLATFORMS_INTEGRATION": "Интеграция с платформами для работы",
+      "JOB_PLATFORMS_INTEGRATION_DESC": "Прямая публикация резюме и отправка откликов на популярные платформы",
       "EXPORT": "Экспорт в форматы",
       "EXPORT_DESC": "Скачивание в PDF, DOCX и других популярных форматах"
     },
@@ -208,10 +208,10 @@
     "PROFILE": "Перейти в профиль",
     "RESUME_GENERATION_IN_PROCESS": "Создание резюме в процессе",
     "GENERATE_RESUME": "Генерация резюме",
-    "PUBLISH_TO_HH": "Опубликовать на HH.ru",
+    "PUBLISH_TO_JOB_PLATFORMS": "Опубликовать на платформы",
     "GENERATE_COVER_LETTER": "Сгенерировать письмо",
     "SETTINGS": "Настройки шаблонов",
-    "SEND_TO_HH": "Отправить на HH.ru",
+    "SEND_TO_JOB_PLATFORMS": "Отправить на платформы",
     "SAVE_TEMPLATE": "Сохранить шаблон",
     "SAVE_CHANGES": "Сохранить изменения",
     "EDIT": "Редактировать",
@@ -242,7 +242,7 @@
     "FEATURES": {
       "AI": "AI-генерация",
       "EXPORT": "Множество форматов",
-      "INTEGRATION": "Интеграция с HH.ru"
+      "JOB_PLATFORMS_INTEGRATION": "Интеграция с платформами"
     },
     "GET_STARTED": "Начать работу",
     "WELCOME_BACK": "С возвращением!"
@@ -253,7 +253,7 @@
     "COVER_LETTER_SECTION": "Сопроводительное письмо",
     "COVER_LETTER_PLACEHOLDER": "Введите текст сопроводительного письма или оставьте пустым для автоматической генерации контекста",
     "USE_COVER_LETTER": "Использовать сопроводительное письмо",
-    "PUBLISH_SUCCESS": "Резюме успешно опубликовано на HH.ru",
+    "PUBLISH_SUCCESS": "Резюме успешно опубликовано на платформах",
     "PUBLISH_ERROR": "Ошибка публикации резюме",
     "GENERATING": "Идет генерация резюме...",
     "SAVE_SUCCESS": "Резюме сохранено",
@@ -262,9 +262,9 @@
     "COVER_LETTER_OPTIONAL": "Сопроводительное письмо (опционально)",
     "COVER_LETTER_HINT": "Добавьте сопроводительное письмо для дополнительного контекста при генерации резюме",
     "VACANCY_URL": "Ссылка на вакансию",
-    "VACANCY_URL_HINT": "Вставьте ссылку на вакансию HH.ru для адаптации резюме под конкретную должность",
-    "PUBLISHING": "Публикация на HH.ru...",
-    "VIEW_ON_HH": "Посмотреть на HH.ru",
+    "VACANCY_URL_HINT": "Вставьте ссылку на вакансию для адаптации резюме под конкретную должность",
+    "PUBLISHING": "Публикация...",
+    "VIEW_ON_PLATFORMS": "Посмотреть на платформе",
     "COVER_LETTER": "Сопроводительное письмо",
     "VACANCY_INFO": "Информация о вакансии",
     "UPLOAD_COVER_LETTER": "Загрузить сопроводительное письмо",
@@ -276,13 +276,13 @@
     "CONNECT_HH": "Подключить HH.ru",
     "CONNECT_SUPERJOB": "Подключить SuperJob",
     "CONNECT_HABR": "Подключить Habr Career",
-    "CONNECTING": "Подключение к HH.ru...",
-    "SUCCESS": "Успешно подключено к HH.ru!",
-    "ERROR": "Ошибка подключения к HH.ru",
+    "CONNECTING": "Подключение...",
+    "SUCCESS": "Успешно подключено!",
+    "ERROR": "Ошибка подключения",
     "DISCONNECT": "Отключить",
     "STATUS_CONNECTED": "✓ Подключено",
     "STATUS_DISCONNECTED": "Не подключено",
-    "PLATFORM_INFO": "Подключите ваш аккаунт HH.ru для:",
+    "PLATFORM_INFO": "Подключите ваши аккаунты для:",
     "BENEFITS": {
       "IMPORT": "Импорт резюме",
       "SEARCH": "Поиск вакансий",
@@ -301,7 +301,7 @@
   },
   "COVER_LETTER": {
     "TITLE": "Генерация сопроводительного письма",
-    "SELECT_RESUME": "Выберите резюме из HH.ru",
+    "SELECT_RESUME": "Выберите резюме",
     "SELECT_RESUME_PLACEHOLDER": "Выберите резюме...",
     "RESUME_ID": "ID резюме в системе",
     "UPLOAD_RESUME": "Загрузить резюме",
@@ -309,7 +309,7 @@
     "VACANCY_ID": "ID вакансии",
     "VACANCY_ID_PLACEHOLDER": "Например: 12345678 (HH) или 12345 (SuperJob)",
     "VACANCY_URL": "Ссылка на вакансию",
-    "VACANCY_URL_HINT": "Вставьте ссылку на вакансию HH.ru для получения детальной информации",
+    "VACANCY_URL_HINT": "Вставьте ссылку на вакансию для получения детальной информации",
     "STYLE": "Стиль письма",
     "STYLE_PLACEHOLDER": "Выберите стиль",
     "TONE": "Тон письма",
@@ -318,8 +318,8 @@
     "GENERATING": "Генерация письма...",
     "GENERATE_SUCCESS": "Письмо успешно сгенерировано",
     "GENERATE_ERROR": "Ошибка генерации письма",
-    "SEND_SUCCESS": "Письмо отправлено на HH.ru!",
-    "SEND_ERROR": "Ошибка отправки на HH.ru",
+    "SEND_SUCCESS": "Письмо отправлено!",
+    "SEND_ERROR": "Ошибка отправки",
     "COPY_SUCCESS": "Текст скопирован в буфер обмена!",
     "COPY_ERROR": "Ошибка копирования",
     "SAVE_TEMPLATE_SUCCESS": "Шаблон сохранен!",
@@ -363,7 +363,7 @@
     "SUCCESS": "Файл успешно обработан",
     "ERROR": "Ошибка обработки файла",
     "VACANCY_URL": "Ссылка на вакансию",
-    "VACANCY_URL_HINT": "Вставьте ссылку на вакансию zдля получения детальной информации"
+    "VACANCY_URL_HINT": "Вставьте ссылку на вакансию для получения детальной информации"
   },
   "RESUME": {
     "MANAGEMENT_TITLE": "Управление резюме",
@@ -567,7 +567,7 @@
     },
     "EMPLOYMENT": {
       "FULL": "Полная занятость",
-      "PART": "Частичная занятость",
+      "PART": "Частичная занятости",
       "PROJECT": "Проектная работа",
       "VOLUNTEER": "Волонтерство",
       "PROBATION": "Стажировка"
