--- a/frontend/src/locale/messages.ru.json
+++ b/frontend/src/locale/messages.ru.json
@@ -58,6 +58,8 @@
     "INFO": "Информация",
     "RESUMES": "Резюме",
     "COMPLETION": "Заполнение профиля",
+    "DOWNLOAD": "Скачать", 
+    "CLOSE": "Закрыть",
     "PERSONAL_INFO": {
       "TITLE": "Личная информация",
       "NAME": "ФИО",
@@ -71,7 +73,8 @@
       "DESIRED_POSITIONS": "Желаемые должности",
       "ADD_POSITION": "Добавить должность",
       "VIEW": "Просмотр профиля",
-      "EDIT": "Редактировать профиль"
+      "EDIT": "Редактировать профиль",
+      "NOT_SPECIFIED": "Не указано"
     },
     "CONTACT_INFO": {
       "TITLE": "Контактная информация",
@@ -193,7 +196,8 @@
     },
     "PREVIEW_TITLE": "Предпросмотр",
     "PROFILE_VIEW": {
-      "LOGIN_PROMPT": "Пожалуйста, войдите для просмотра профиля"
+      "LOGIN_PROMPT": "Пожалуйста, войдите для просмотра профиля",
+      "EMPTY": "Профиль не заполнен"
     },
     "COMPLETE": "Заполнено",
     "IN_PROGRESS": "В процессе"
@@ -508,7 +512,8 @@
     "SEARCH_BUTTON": "Поиск",
     "ONLY_WITH_SALARY": "Только с зарплатой",
     "REMOTE": "Удаленная работа",
-    "RESET": "Сбросить"
+    "RESET": "Сбросить",
+    "RESET_FILTERS": "Сбросить фильтры"
   },
   "EXPORT": {
     "SETTINGS": "Настройки экспорта",
@@ -544,7 +549,8 @@
     "LOCATION": "Местоположение",
     "DESCRIPTION": "Описание",
     "REQUIREMENTS": "Требования",
-    "ORIGINAL_LINK": "Оригинальная ссылка"
+    "ORIGINAL_LINK": "Оригинальная ссылка",
+    "VIEW_ORIGINAL": "Посмотреть оригинал"
   },
   "EXAMPLE": {
     "SUPPORTED": "Поддерживаемые форматы ссылок"
@@ -553,7 +559,8 @@
     "VACANCY": "Загрузка вакансии...",
     "SEARCH": "Поиск...",
     "DETAILS": "Загрузка деталей...",
-    "PROFILE": "Загрузка профиля..."
+    "PROFILE": "Загрузка профиля...",
+    "RESUMES": "Загрузка резюме..."
   },
   "VIEW": {
     "EMPTY": "Профиль не заполнен"
@@ -640,7 +647,9 @@
   "PLATFORM": {
     "HH": "HH.ru",
     "SUPERJOB": "SuperJob",
-    "UNKNOWN": "Неизвестная платформа"
+    "UNKNOWN": "Неизвестная платформа",
+    "CONNECT_HH": "Подключить HH.ru",
+    "CONNECT_SUPERJOB": "Подключить SuperJob"
   },
   "AI_CONFIG": {
     "BUTTON_TOOLTIP": "Настроить AI провайдеры",
@@ -657,7 +666,18 @@
     "SUPPORTED_FORMATS": "Поддерживаемые форматы: TXT, PDF, DOC, DOCX, RTF",
     "NO_RESUMES": "Резюме не найдены",
     "NO_RESUMES_HINT": "Подключите аккаунты платформ или загрузите файл резюме",
-    "SELECT": "Выбрать"
+    "SELECT": "Выбрать",
+    "TAB_PLATFORM": "Резюме с платформ",
+    "FILE_TITLE": "Загрузить файл резюме",
+    "TAB_FILE": "Из файла",
+    "TAB_TEXT": "Текстовый ввод",
+    "TEXT_TITLE": "Ввод текста резюме",
+    "TEXT_PLACEHOLDER": "Вставьте текст вашего резюме здесь...",
+    "TEXT_HINT": "Введите содержание резюме вручную"
+  },
+  "VACANCY_SEARCH": {
+    "TAB_SEARCH": "Поиск вакансий", 
+    "TAB_FAVORITES": "Избранные"
   },
   "VACANCY_SELECTOR": {
     "TITLE": "Выбор вакансии",
@@ -672,7 +692,10 @@
     "NO_FAVORITES": "Нет избранных вакансий",
     "SELECTED_VACANCY": "Выбранная вакансия",
     "SELECT": "Выбрать",
-    "QUICK_LOAD_HINT": "Быстрая загрузка вакансии из любого источника"
+    "QUICK_LOAD_HINT": "Быстрая загрузка вакансии из любого источника",
+    "TEXT_TITLE": "Ввод текста",
+    "TEXT_PLACEHOLDER": "Вставьте текст описания вакансии",
+    "TEXT_HINT": "Введите описание вакансии вручную"
   },
   "FILTER": "Фильтр",
   "ACTIONS": "Действия",
@@ -692,5 +715,15 @@
   "RESET": "Сбросить",
   "CLOSE": "Закрыть",
   "DELETE_CONFIRMATION": "Вы уверены, что хотите удалить это?",
-  "UNSAVED_CHANGES": "У вас есть несохраненные изменения. Вы уверены, что хотите уйти?"
+  "UNSAVED_CHANGES": "У вас есть несохраненные изменения. Вы уверены, что хотите уйти?",
+  "GENERATE_ALL_CONTENT": "Сгенерировать всё для всех",
+  "FAVORITE_VACANCIES": "Избранные вакансии",
+  "NO_FAVORITES": "Нет избранных вакансий",
+  "REMOVE_FROM_FAVORITES": "Удалить из избранного",
+  "ADD_TO_FAVORITES": "Добавить в избранное",
+  "DEVELOPMENT_PLAN": "План развития",
+  "SEND_TO_PLATFORM": "Отправить на платформу",
+  "LAST_GENERATED": "Последняя генерация",
+  "RESUME_FOR_SENDING": "Резюме для отправки",
+  "SELECT_RESUME": "Выберите резюме"
 }
