--- a/frontend/src/locale/messages.ru.json
+++ b/frontend/src/locale/messages.ru.json
@@ -26,8 +26,12 @@
   },
   "AUTH": {
     "LOGIN": {
-      "HEADER": "Пожалуйста, войдите в систему",
-      "VIA_GOOGLE": "Войти через Google"
+      "HEADER": "Вход в систему",
+      "VIA_GOOGLE": "Войти через Google",
+      "SIMPLE_AUTH": "Быстрый вход",
+      "EMAIL": "Email",
+      "PASSWORD": "Пароль",
+      "SIGN_IN": "Войти / Зарегистрироваться"
     },
     "GO_TO_LOGIN": "Перейти на страницу входа"
   },
